[package]
name = "ludusavi-manifest"
version = "0.1.0"
authors = ["mtkennerly <mtkennerly@gmail.com>"]
edition = "2021"
description = "Ludusavi manifest importer"
repository = "https://github.com/mtkennerly/ludusavi-manifest"
readme = "README.md"
license = "MIT"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.11", features = ["derive", "wrap_help"] }
itertools = "0.12.0"
jsonschema = "0.17.1"
mediawiki = "0.2.11"
once_cell = "1.18.0"
regex = "1.10.2"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.8.25"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
wikitext-parser = "0.3.3"
