[package]
name = "ludusavi-manifest"
version = "0.1.0"
authors = ["mtkennerly <mtkennerly@gmail.com>"]
edition = "2021"
description = "Ludusavi manifest importer"
repository = "https://github.com/mtkennerly/ludusavi-manifest"
readme = "README.md"
license = "MIT"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.8", features = ["derive", "wrap_help"] }
itertools = "0.13.0"
jsonschema = "0.18.0"
mediawiki = "0.3.1"
once_cell = "1.19.0"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
serde_yaml = "0.8.26"
signal-hook = "0.3.17"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
wikitext-parser = "0.3.3"
